# DigitDetection

./: (NewTables)my.yml  .gitignore  CMakeLists.txt  Digit_Finder.cpp  Digit_Finder.h  Digit_Recognition_MonocularVision.cpp  Digit_Trainer.cpp  Digit_Trainer.h  README.md  digit_finder.cpp  digit_finder.h  digit_recognition_recognition  digit_recognition_rotate_sample  digit_recognition_trainer  find_main.cpp  model.yml  rotate_main.cpp  train_main.cpp  trainer.cpp  trainer.hpp
